// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Basic renders correctly 1`] = `
<div>
  <div
    class="css-1ymk5a9-boxStyles-Card"
  >
    <div
      class="css-tlv6k9-boxStyles"
    >
      <div
        class="css-1y18cda-boxStyles"
      >
        <h2
          class="css-a5mrla-boxStyles"
        >
          Card heading
        </h2>
        <p
          class="css-1e881ou-boxStyles"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, voluptat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card With link renders correctly 1`] = `
<div>
  <div
    class="css-l3x99g-boxStyles-Card"
  >
    <div
      class="css-tlv6k9-boxStyles"
    >
      <div
        class="css-1y18cda-boxStyles"
      >
        <h2
          class="css-a5mrla-boxStyles"
        >
          Card heading
        </h2>
        <p
          class="css-1e881ou-boxStyles"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, voluptat
        </p>
        <a
          class="css-1yk2y1m-CardLink"
          href="#"
        >
          Linking out
          <svg
            aria-hidden="true"
            class="css-1yxmhzb"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
